# seam-carving

./: .clang-format  .gitignore  Dockerfile  README.md  entrypoint.sh
examples/: castle-minimal-energy-sobel-x-y.tiff
src/: CMakeLists.txt  main.cpp  seam_carving.cpp  seam_carving.h
src/unit-tests/: CMakeLists.txt  unit-tests.cpp
